# stereo_carlet

./: .gitignore  CMakeLists.txt  README.md  light_tracking.cpp  main.cpp  stereo_ver.2.files
include/: light_tracking.h
